Fix div spill on vertical resize

--- a/style.css
+++ b/style.css
@@ -109,22 +109,26 @@ select {
   flex-direction: column;
   flex: 2;
   flex-basis: 63%;
+  /* flex-wrap: wrap; */
 }
 
 .hero {
   height: 37%;
+  min-height: 310px;
   background-color: rgba(211, 211, 211, 0.2);
   padding: 4em 3em 5em 3em;
 }
 
 .input {
   height: 26%;
+  min-height: 310px;
   box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.2);
-  padding: 1em;
+  padding: 2em 3em;
 }
 
 .login {
   height: 37%;
+  min-height: 310px;
   background-color: rgba(211, 211, 211, 0.2);
-  padding: 1em;
+  padding: 2em 3em;
 }
